contrib/mwrap-1.1.1/testing/test_syntax.mw

function badmojo
# double z = sumpair(double x)
// Missing semicolon should result in error
// Another line just to double check lines
# double z = sumpair(double x);
# double z = sumpair(double x)
